# mono

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  fusesoc.conf  pyproject.toml  sourceme
docs/: Makefile
docs/guides/: migen_generator.md  xdc_generator.md
docs/guides/verilog/: combinational.md  conventions.md  formatting.md  fsm.md  index.md  modules.md  naming.md  sequential.md
docs/plans/: ibex_debug_options.md  ibex_soc_tasks.md
docs/source/: conf.py  index.rst  repository.rst
docs/source/ibex_soc/: c_toolchain.rst  index.rst  memory_map.rst
docs/source/ip/: index.rst
docs/source/ip/usb/: usb_protocol.rst  usb_uart.rst
docs/source/projects/: index.rst
docs/source/pytest/: firmware.rst  fixtures.rst  index.rst  nfs_locking.rst  xdist.rst
docs/source/serv_soc/: index.rst  memory_map.rst
docs/source/soc/: index.rst
docs/source/soc/ibex_soc/: c_toolchain.rst
docs/source/soc/serv_soc/: c_toolchain.rst  memory_map.rst
docs/source/tools/: index.rst  migen_netlister.rst
docs/source/usb/: etherbone.rst  ft601_phy.rst  index.rst  monitor.rst  overview.rst  software.rst  sv_conversion.rst  usb_uart.rst
hw/boards/squirrel/: board.yaml  squirrel.core
hw/generators/: generators.core  migen_netlister.py  xdc_generator.py
hw/ip/bus/wb_crossbar/: wb_crossbar.core
hw/ip/bus/wb_pkg/: wb_pkg.core
hw/ip/clk/mmcm/: mmcm.core
hw/ip/cpu/ibex/: ibex.core
hw/ip/cpu/ibex_cpu/: ibex_cpu.core
hw/ip/cpu/serv/: serv_wb.core
hw/ip/csr/: csr.core
hw/ip/csr/lint/: verilator.vlt
hw/ip/csr/rtl/: rdl_subreg.sv  rdl_subreg_arb.sv  rdl_subreg_ext.sv  rdl_subreg_flop.sv  rdl_subreg_pkg.sv  wb2simple.sv
hw/ip/gpio/: gpio.core
hw/ip/gpio/dv/: gpio_tb.sv
hw/ip/gpio/lint/: verilator.vlt
hw/ip/gpio/rdl/: Makefile  gpio_csr.rdl
hw/ip/gpio/rtl/: gpio.sv  gpio_bit_ctrl.sv  (+2 more)
hw/ip/timer/: timer.core
hw/ip/usb/: usb_core.core  usb_etherbone.core  usb_packetizer.core
hw/ip/usb_bridge/: usb_bridge.core
hw/ip/usb_uart/: usb_uart.core
mono/cocotb/: __init__.py
mono/cocotb/ft601/: __init__.py  bus.py  driver.py  monitor.py
mono/cocotb/wishbone/: __init__.py  wb_master.py  wb_slave.py
mono/gateware/usb/: __init__.py  core.py  etherbone.py  etherbone_adapter.py  ft601.py
mono/gateware/wrappers/: __init__.py  usb_core.py  usb_etherbone.py  usb_packetizer.py
mono/migen/: __init__.py  netlister.py
mono/tools/xdc/: __init__.py  board.py  generator.py  sv_parser.py
mono/utils/: __init__.py  git.py
sw/device/ibex_soc/: common.mk  crt0.S  link.ld
sw/device/serv_soc/: common.mk  crt0.S  link.ld
(+104 files in other folders)
