[project]
name = "mono"
version = "0.1.0"
description = ""
requires-python = ">=3.8"
dependencies = [
    "fusesoc",
    "migen @ git+https://git.m-labs.hk/M-Labs/migen.git@673e0e8a66600f7e8dcd6345759630474d6b9c80",
    "litex @ git+https://github.com/enjoy-digital/litex.git@2025.08",
    "liteeth @ git+https://github.com/enjoy-digital/liteeth.git@2025.12",
    "litepcie @ git+https://github.com/sjalloq/litepcie.git@feature/tlp-attributes",
    "peakrdl-sv @ git+https://github.com/sjalloq/peakrdl-sv",
    "rich-click>=1.7",
    "pre-commit",
    "cocotb>=2.0",
    "cocotb-test",
    "pyslang",
]

[project.optional-dependencies]
docs = [
    "sphinx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
